# GoldenAI

./: .gitignore  Cargo.toml  goldenai.pyi  pyproject.toml  test.py
.github/workflows/: CI.yml
examples/python/: example.py  test.py
goldenai/: __init__.py  __init__.pyi
goldenai/py/: goldenai_py.py  struct.py
src/: lib.rs  message.rs  ollama.rs  req_structs.rs  request.rs  res_structs.rs  response.rs
src/anthropic/: anthropic.rs  structs.rs
src/ollama/: ollama.rs  structs.rs
src/openai/: openai.rs  structs.rs
