[package]
name = "goldenai"
version = "0.3.3"
edition = "2024"
description = "GoldenTech AI Python SDK. Powered by Rust PyO3, OpenAI, Anthropic and Ollama."
authors = ["Guangyu He <guangyu.he@golden-tech.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "goldenai"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["abi3-py310"] }
# pyo3-async-runtimes = { version = "0.25", features = ["attributes", "tokio-runtime"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.99"
openssl = { version = "0.10.73", features = ["vendored"] }
tiktoken-rs = "0.7.0"
base64 = "0.22.1"
pythonize = "0.25.0"

[features]
extension-module = ["pyo3/extension-module"]
