[package]
name = "goldenai"
version = "0.3.4"
edition = "2024"
description = "GoldenTech AI Python SDK. Powered by Rust PyO3, OpenAI, Anthropic and Ollama."
authors = ["Guangyu He <guangyu.he@golden-tech.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "goldenai"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.26", features = ["abi3-py310"] }
# pyo3-async-runtimes = { version = "0.25", features = ["attributes", "tokio-runtime"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
tiktoken-rs = "0.7"
base64 = "0.22"
pythonize = "0.26"

[features]
extension-module = ["pyo3/extension-module"]
